--- a/UserPassManagePro/project.properties
+++ b/UserPassManagePro/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=C:/Users/Administrator/git/account_pass_manager/SlidingMenu
+android.library.reference.1=../SlidingMenu
