--- a/UserPassManagePro/bin/AndroidManifest.xml
+++ b/UserPassManagePro/bin/AndroidManifest.xml
@@ -9,20 +9,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_search_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.shai.manage.activity.StartActivity"
-            android:label="@string/app_name" >
+            android:enabled="true"
+            android:label="@string/app_name"
+            android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.shai.manage.activity.MainActivity" >
+        <activity android:name="com.shai.manage.activity.MainActivity" >
         </activity>
     </application>
 
