--- a/UserPassManagePro/AndroidManifest.xml
+++ b/UserPassManagePro/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:targetSdkVersion="14" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/app_search_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -26,6 +25,8 @@
         <activity android:name="com.shai.manage.activity.MainActivity" >
         </activity>
         <activity android:name="com.shai.manage.activity.other.AddUsePassActivity" >
+        </activity>
+        <activity android:name="com.shai.manage.activity.other.PassGroupInfoActivity" >
         </activity>
     </application>
 
