--- a/ZakerDemo/AndroidManifest.xml
+++ b/ZakerDemo/AndroidManifest.xml
@@ -3,16 +3,22 @@
     package="com.siqi.geli"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-	<supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"
+
+    <supports-screens
+        android:anyDensity="true"
         android:largeScreens="true"
+        android:normalScreens="true"
         android:resizeable="true"
-        android:anyDensity="true" />
+        android:smallScreens="true" />
+
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="10"
         android:targetSdkVersion="14" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -45,6 +51,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.siqi.geli.main.bundledisign.AgentManageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.siqi.geli.main.bundledisign.GeliSubsidiaryActivity"
             android:screenOrientation="portrait" />
     </application>
 
