--- a/UserPassManagePro/project.properties
+++ b/UserPassManagePro/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-15
 android.library.reference.1=..\\SlidingMenu
-android.library.reference.2=../../android-satellite-menu/satellite-menu
+android.library.reference.2=..\\..\\android-satellite-menu\\satellite-menu
+android.library.reference.3=../SQBundleSdkByPullRefreshViewAndExpandListView
