--- a/ZakerDemo/AndroidManifest.xml
+++ b/ZakerDemo/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/geli_logo"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
